[project]
name = "audio-duration"
description = "Returns the duration of an audio source, which can be provided either as a filesystem path or as raw audio data (samples and sample rate) from an upstream node. Duration calculation primarily uses ffprobe (from FFmpeg) for paths, or calculates the duration directly from samples/SR if no path is available."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["scipy", "numpy", "# Optional: Include torch if you handle PyTorch tensors a lot and want to ensure it's available,", "# though it's usually already present in ComfyUI environments.", "# torch"]

[project.urls]
Repository = "https://github.com/scofano/comfy-audio-duration"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/scofano/comfy-audio-duration/wiki"
"Bug Tracker" = "https://github.com/scofano/comfy-audio-duration/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfy-audio-duration"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

